apps/adguard-home/prd/templates/adguard-home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home-ingress
  namespace: adguard-home
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: dns-adg.djasko.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home
            port:
              name: http
  tls:
  - hosts:
    - dns-adg.djasko.com
    secretName: adguard-home-djasko-com-tls
